results/SpecGenBench/2-shot/log-CheckABeforeB-2023_11_05_23_04_59.txt
class CheckABeforeB {
    //@ requires s != null;
    //@ ensures \result <==> (\forall int i; 0 <= i && i < chars.length; chars[i] == 'a') && (\forall int j; i <= j && j < chars.length; chars[j] == 'b');
    public boolean checkString(String s) {
        char[] chars = s.toCharArray();
        int i = 0;
        //@ maintaining 0 <= i && i <= chars.length;
        //@ maintaining (\forall int k; 0 <= k && k < i; chars[k] == 'a');
        //@ decreases chars.length - i;
        while (i < chars.length && chars[i] == 'a') {
            i++;
        }
        int j = i;
        //@ maintaining i <= j && j <= chars.length;
        //@ maintaining (\forall int k; i <= k && k < j; chars[k] == 'b');
        //@ decreases chars.length - j;
        while (j < chars.length && chars[j] == 'b') {
            j++;
        }
        return j == chars.length;
    }
}
/home/max/Documents/JMLGPT/tmp/CheckABeforeB.java:3: error: cannot find symbol
    //@ ensures \result <==> (\forall int i; 0 <= i && i < chars.length; chars[i] == 'a') && (\forall int j; i <= j && j < chars.length; chars[j] == 'b');
                                                           ^
  symbol:   variable chars
  location: class CheckABeforeB
/home/max/Documents/JMLGPT/tmp/CheckABeforeB.java:3: error: cannot find symbol
    //@ ensures \result <==> (\forall int i; 0 <= i && i < chars.length; chars[i] == 'a') && (\forall int j; i <= j && j < chars.length; chars[j] == 'b');
                                                                         ^
  symbol:   variable chars
  location: class CheckABeforeB
/home/max/Documents/JMLGPT/tmp/CheckABeforeB.java:3: error: cannot find symbol
    //@ ensures \result <==> (\forall int i; 0 <= i && i < chars.length; chars[i] == 'a') && (\forall int j; i <= j && j < chars.length; chars[j] == 'b');
                                                                                                             ^
  symbol:   variable i
  location: class CheckABeforeB
/home/max/Documents/JMLGPT/tmp/CheckABeforeB.java:3: error: cannot find symbol
    //@ ensures \result <==> (\forall int i; 0 <= i && i < chars.length; chars[i] == 'a') && (\forall int j; i <= j && j < chars.length; chars[j] == 'b');
                                                                                                                           ^
  symbol:   variable chars
  location: class CheckABeforeB
/home/max/Documents/JMLGPT/tmp/CheckABeforeB.java:3: error: cannot find symbol
    //@ ensures \result <==> (\forall int i; 0 <= i && i < chars.length; chars[i] == 'a') && (\forall int j; i <= j && j < chars.length; chars[j] == 'b');
                                                                                                                                         ^
  symbol:   variable chars
  location: class CheckABeforeB
5 errors

